@@ -1103,30 +1103,25 @@ pvm_type_equal (pvm_val type1, pvm_val type2)
       {
         size_t t1_size = PVM_VAL_ULONG (PVM_VAL_TYP_I_SIZE (type1));
         size_t t2_size = PVM_VAL_ULONG (PVM_VAL_TYP_I_SIZE (type2));
-        uint32_t t1_signed = PVM_VAL_INT (PVM_VAL_TYP_I_SIGNED_P (type1));
-        uint32_t t2_signed = PVM_VAL_INT (PVM_VAL_TYP_I_SIGNED_P (type2));
+        int32_t t1_signed = PVM_VAL_INT (PVM_VAL_TYP_I_SIGNED_P (type1));
+        int32_t t2_signed = PVM_VAL_INT (PVM_VAL_TYP_I_SIGNED_P (type2));
 
         return (t1_size == t2_size && t1_signed == t2_signed);
-        break;
       }
     case PVM_TYPE_STRING:
     case PVM_TYPE_ANY:
       return 1;
-      break;
     case PVM_TYPE_ARRAY:
       return pvm_type_equal (PVM_VAL_TYP_A_ETYPE (type1),
                              PVM_VAL_TYP_A_ETYPE (type2));
-      break;
     case PVM_TYPE_STRUCT:
       return (STREQ (PVM_VAL_STR (PVM_VAL_TYP_S_NAME (type1)),
                      PVM_VAL_STR (PVM_VAL_TYP_S_NAME (type2))));
-      break;
     case PVM_TYPE_OFFSET:
       return (pvm_type_equal (PVM_VAL_TYP_O_BASE_TYPE (type1),
                               PVM_VAL_TYP_O_BASE_TYPE (type2))
               && (PVM_VAL_ULONG (PVM_VAL_TYP_O_UNIT (type1))
                   == PVM_VAL_ULONG (PVM_VAL_TYP_O_UNIT (type2))));
-      break;
     case PVM_TYPE_CLOSURE:
       {
         size_t i, nargs;
@@ -1149,7 +1144,6 @@ pvm_type_equal (pvm_val type1, pvm_val type2)
 
         return 1;
       }
-      break;
     default:
       assert (0);
     }
