@@ -1,3 +1,7 @@
+2020-08-07  Kostas Chasialis  <sdi1600195@di.uoa.gr>
+
+	* libpoke/pvm-val.c (pvm_type_equal): Bugfixes.
+
 2020-08-04  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/libpoke.h: Document that PK_NULL should have the same
